# contrib-stats

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/contrib_stats/: __init__.py  __main__.py  aggregator.py  cli.py  dashboard.py  exceptions.py  promotion.py  tagging.py
src/contrib_stats/providers/: __init__.py  base.py  github.py  gitlab.py
src/contrib_stats/utils/: __init__.py  validation.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_exceptions.py  test_promotion.py  test_providers.py  test_tagging.py  test_validation.py
